fixed app developement

--- a/appdevelop.html
+++ b/appdevelop.html
@@ -571,8 +571,7 @@
                             </div>
                             <!-- from -->
                             <div class="contact__input__wrapper contact__grident__bg" style="padding: 30px;">
-                                <form id="contact-form" class="contact-form"
-                                action="email.php">
+                                <form id="contact-form" class="contact-form" action="email.php">
                                     <div class="row">
                                         <div class="col-xl-12">
                                             <div class="contact__input">
@@ -645,8 +644,18 @@
                             <div class="service__details__planning" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="row">
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                                        <div class="service__details__planning__img">
-                                            <img src="assets/img/service/service__details__2.png" alt="">
+                                      
+                                        <!-- video -->
+                                        <div class="breadcrumbarea-video-small">
+                                            <div class="breadcrumbarea__overlay-video">
+                                                <video class="breadcrumbarea__video__element" autoplay="" muted=""
+                                                    loop="">
+                                                    <source
+                                                        src="assets/img/service/appdev.mp4"
+                                                        type="video/mp4">
+                                                    Your browser does not support the video tag.
+                                                </video>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
@@ -701,7 +710,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/Mobile Application Development/User Interface (UI) Design.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/Mobile Application Development/User Interface (UI) Design.png"
+                                        class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -719,8 +729,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/IT Specialist/Database Management.png" class="img-fluid rounded-start"
-                                        alt="...">
+                                    <img src="assets/img/service/IT Specialist/Database Management.png"
+                                        class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -739,8 +749,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/IT Specialist/Software DevelopmentIntegration.png" class="img-fluid rounded-start"
-                                        alt="...">
+                                    <img src="assets/img/service/IT Specialist/Software DevelopmentIntegration.png"
+                                        class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -758,7 +768,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/Software Development/Testing.png" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/Software Development/Testing.png"
+                                        class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -776,8 +787,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/Software Development/Deployment.png" class="img-fluid rounded-start"
-                                        alt="...">
+                                    <img src="assets/img/service/Software Development/Deployment.png"
+                                        class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -796,8 +807,8 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/Software Development/Maintenance & Updates.png" class="img-fluid rounded-start"
-                                        alt="...">
+                                    <img src="assets/img/service/Software Development/Maintenance & Updates.png"
+                                        class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -811,7 +822,7 @@
                             </div>
                         </div>
                     </div>
-                
+
                 </div>
 
                 <div class="row">
