--- a/webdevelopment.html
+++ b/webdevelopment.html
@@ -647,10 +647,18 @@
                             <div class="service__details__planning" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="row">
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                                        <div class="service__details__planning__img">
-                                            <img src="assets/img/service/web Service Detail.png"
-                                                alt="Development Services">
-                                        </div>
+                                            <!-- video -->
+                                            <div class="breadcrumbarea-video-small">
+                                                <div class="breadcrumbarea__overlay-video">
+                                                    <video class="breadcrumbarea__video__element" autoplay="" muted=""
+                                                        loop="">
+                                                        <source
+                                                            src="assets/img/service/soft.mp4"
+                                                            type="video/mp4">
+                                                        Your browser does not support the video tag.
+                                                    </video>
+                                                </div>
+                                            </div>
                                     </div>
                                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                                         <div class="service__details__planning__inner">
