--- a/GameDevelop.html
+++ b/GameDevelop.html
@@ -570,8 +570,7 @@
                         </div>
                         <!-- from -->
                         <div class="contact__input__wrapper contact__grident__bg" style="padding: 30px;">
-                            <form id="contact-form" class="contact-form"
-                            action="email.php">
+                            <form id="contact-form" class="contact-form" action="email.php">
                                 <div class="row">
                                     <div class="col-xl-12">
                                         <div class="contact__input">
@@ -694,11 +693,10 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Custom Web Development</h5>
+                                        <h5 class="card-title">Game Design Framework</h5>
                                         <span class="card-text">Digital Minds specializes in custom
-                                            WordPress
-                                            web development, enhancing your brand and creating a web
-                                            presence that aligns perfectly with your business goals.
+                                            Defines core gameplay mechanics, narrative elements, and user experience for
+                                            immersive and engaging gameplay.
                                         </span>
                                     </div>
                                 </div>
@@ -713,11 +711,9 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Frontend/Backend Solutions</h5>
-                                        <span class="card-text">Our knowledgeable team excels in
-                                            creating impactful frontend designs and dynamic,
-                                            efficient backend solutions that ensure scalability and
-                                            robust performance.</span>
+                                        <h5 class="card-title">Art and Animation Pipeline</h5>
+                                        <span class="card-text">Produces stunning visuals, character animations, and
+                                            environment designs for a visually captivating game world.</span>
                                     </div>
                                 </div>
                             </div>
@@ -731,11 +727,9 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">CMS Development</h5>
-                                        <span class="card-text">By adopting web content management
-                                            systems such as WordPress, Joomla, Drupal, and others,
-                                            website content can be updated by persons without any
-                                            technical knowledge of website design.
+                                        <h5 class="card-title">Programming and Scripting Module</h5>
+                                        <span class="card-text">Implements gameplay logic, AI, and mechanics, ensuring
+                                            smooth performance and functionality across platforms.
                                         </span>
                                     </div>
                                 </div>
@@ -750,12 +744,10 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">E-Commerce Development
+                                        <h5 class="card-title">Audio and Sound Design System
                                         </h5>
-                                        <span class="card-text">Make your visitors into customers with
-                                            our comprehensive e-commerce features, including payment
-                                            PSD templates, stock tracking, and detailed reporting
-                                            tools.
+                                        <span class="card-text">Enhances immersion with dynamic sound effects, music,
+                                            and voiceovers tailored to the game's atmosphere.
                                         </span>
                                     </div>
                                 </div>
@@ -770,10 +762,9 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">Web Application Development</h5>
-                                        <span class="card-text">Whether you are a small business
-                                            starting or a large enterprise, we create reliable and
-                                            robust web applications for your needs.
+                                        <h5 class="card-title">Testing and Quality Assurance Toolkit</h5>
+                                        <span class="card-text">Identifies bugs and ensures a polished, glitch-free
+                                            experience before launch through extensive testing phases.
                                         </span>
                                     </div>
                                 </div>
@@ -788,73 +779,17 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h5 class="card-title">API Integration </h5>
-                                        <span class="card-text">Automate and integrate relevant
-                                            business applications and CRMs for your website and fast
-                                            payment solutions.
+                                        <h5 class="card-title">Deployment and Live Operations Suite</h5>
+                                        <span class="card-text">Streamlines game release, updates, and user support,
+                                            ensuring a seamless experience for players post-launch.
                                         </span>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <div class="card mb-3">
-                            <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Responsive Design</h5>
-                                        <span class="card-text">The mobile-first approach is practiced
-                                            at Minds On to make the site look and work right on any
-                                            device the client is using.
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="card mb-3">
-                            <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Website Maintenance</h5>
-                                        <span class="card-text">Another critical factor of success in
-                                            e-business is having a professional website. Keeping
-                                            your site updated and secure, we provide all maintenance
-                                            and support services for your website.
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-8 large-card">
-                        <div class="card mb-3">
-                            <div class="row g-0">
-                                <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
-                                </div>
-                                <div class="col-md-8">
-                                    <div class="card-body">
-                                        <h5 class="card-title">UI/UX Design</h5>
-                                        <span class="card-text">In UI/UX solutions Minds On
-                                            concentrates on making the design aesthetic and
-                                            functional. Our work involves the creation of designs
-                                            that meet the client’s desires concerning their targeted
-                                            customers besides helping them to meet their targets.
-                                        </span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+
+
 
                 </div>
                 <div class="row">
