--- a/wordpress.html
+++ b/wordpress.html
@@ -652,7 +652,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/WordPress Specialist/Theme Development.png" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -670,7 +670,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/WordPress Specialist/Plugin Development.png" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -687,7 +687,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/WordPress Specialist/Website Optimization.png" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -705,7 +705,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/Content cretor/Content Creation.png" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -724,7 +724,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/WordPress Specialist/Security Management.png" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
@@ -742,7 +742,7 @@
                         <div class="card mb-3">
                             <div class="row g-0">
                                 <div class="col-md-4">
-                                    <img src="assets/img/service/33.jpg" class="img-fluid rounded-start" alt="...">
+                                    <img src="assets/img/service/WordPress Specialist/SEO Optimization.png" class="img-fluid rounded-start" alt="...">
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
